<resources>
    <string name="app_name">mosito</string>
    <string name="title_home">Home</string>
    <string name="title_dashboard">Dashboard</string>
    <string name="title_notifications">Notifications</string>
    <string name="noting_to_download">Noting to download</string>
    <string name="profile">Profile</string>
    <string name="dark_mode">Dark Mode</string>
    <string name="logout">Logout</string>
    <string name="library">Library</string>
    <string name="browse">Browse</string>
    <string name="for_you">For You</string>
    <string name="search">Search</string>
    <string name="latest">Latest</string>
    <string name="offers">Mosito offers</string>
    <string name="top_hits">Top hits</string>
    <string name="search_description">Search in Musics, Albums, Artists and Playlists</string>
    <string name="type_to_search">Type to search</string>
    <string name="login_to_your_account">Login to your account</string>
    <string name="create_an_account">Create an account</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="don_t_have_an_account">Don\'t have an account ?</string>
    <string name="have_an_account">Have an account ?</string>
    <string name="create_account">Create account</string>
    <string name="register">Register</string>
    <string name="login">Login</string>
    <string name="name">Name</string>
    <string name="lose_yourself_in_persian_music">Lose yourself in persian music.</string>
    <string name="new_musics">New Musics</string>
    <string name="musics">Musics</string>
    <string name="members">Members</string>
    <string name="new_albums">New Albums</string>
    <string name="albums">Albums</string>
    <string name="related_musics">Related Artists</string>
    <string name="shuffle">shuffle</string>
    <string name="see_all">see all</string>
    <string name="success">Success</string>
    <string name="download_queue">download queue</string>
    <string name="downloads">Downloads</string>
    <string name="popular">Popular</string>
    <string name="phone">Phone</string>
    <string name="forget_password">Forget password</string>
    <string name="playlists">Playlists</string>
    <string name="artists">Artists</string>
    <string name="create">Create</string>
    <string name="recently_added">Recently added</string>
    <string name="added_to_library">Added to library</string>
    <string name="playlist_created">Playlist created</string>
    <string name="playlist_user_error">Register an account to create playlist</string>
    <string name="removed_from_library">Remove</string>
    <string name="add">Add</string>
    <string name="play">Play</string>
    <string name="artists_in_this_album">Artists in this album</string>
    <string name="library_playlists">Library playlists</string>
    <string name="library_album">Library albums</string>
    <string name="library_musics">Library musics</string>
    <string name="library_empty">Your library is empty."</string>
    <string name="my_music">My music</string>
    <string name="player_timer">00:00</string>
    <string name="artist_found">one artist found</string>
    <string name="artists_found"> artists found</string>
    <string name="playlist_found">one playlist found</string>
    <string name="playlists_found"> playlists found</string>
    <string name="album_found">one album found</string>
    <string name="albums_found"> albums found</string>
    <string name="music_found">one music found</string>
    <string name="musics_found"> musics found</string>
    <string name="Apply">apply</string>
    <string name="i_think_you_like_these">I think you like these</string>
    <string name="most_played">Most played</string>
    <string name="playlist_name">Playlist name</string>
    <string name="description">Description</string>
    <string name="new_playlist">New Playlist</string>
    <string name="show_in_search">Show in search</string>
    <string name="discard_playlist">Discard playlist?</string>
    <string name="yes">Yes</string>
    <string name="add_music">Add Music</string>
    <string name="cancel">Cancel</string>
    <string name="list_is_empty">List is empty</string>
</resources>
