<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <data>

        <import type="android.view.View" />

        <variable
            name="percent"
            type="String" />

        <variable
            name="pictureErrors"
            type="String" />

        <variable
            name="typeErrors"
            type="String" />

        <variable
            name="userErrors"
            type="Boolean" />
    </data>

    <androidx.core.widget.NestedScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="?attr/colorBg">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center_horizontal"
            android:orientation="vertical"
            android:paddingStart="7dp"
            android:paddingEnd="7dp"
            android:paddingBottom="65dp">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="10dp"
                android:paddingStart="10dp"
                android:paddingTop="5dp"
                android:paddingEnd="10dp"
                android:paddingBottom="5dp"
                android:text="@string/new_playlist"
                android:textSize="25sp"
                android:textStyle="bold" />

            <com.jcminarro.roundkornerlayout.RoundKornerRelativeLayout
                android:id="@+id/btnPicture"
                android:layout_width="150dp"
                android:layout_height="150dp"
                app:corner_radius="150dp">

                <ImageView
                    android:id="@+id/imgPicture"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:background="#455A64"
                    android:contentDescription="@string/app_name"
                    android:scaleType="centerInside"
                    app:srcCompat="@drawable/ic_camera" />

            </com.jcminarro.roundkornerlayout.RoundKornerRelativeLayout>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:padding="5dp"
                android:text="@{pictureErrors}"
                android:textAlignment="center"
                android:textColor="?attr/colorPrimary"
                android:visibility="@{pictureErrors != null ? View.VISIBLE : View.GONE}" />

            <com.google.android.material.textfield.TextInputLayout
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginTop="15dp"
                android:layout_marginBottom="15dp"
                android:hint="@string/playlist_name">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/edtName"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:inputType="text"
                    android:maxLines="1" />

            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                android:layout_width="match_parent"
                android:layout_height="100dp"
                android:layout_marginBottom="15dp"
                android:hint="@string/description">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/edtDescription"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:background="@null"
                    android:gravity="top"
                    android:inputType="textMultiLine"
                    android:maxLines="2"
                    android:overScrollMode="always"
                    android:scrollbarStyle="insideInset"
                    android:scrollbars="vertical" />

            </com.google.android.material.textfield.TextInputLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:orientation="horizontal">

                <TextView
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/show_in_search" />

                <com.google.android.material.switchmaterial.SwitchMaterial
                    android:id="@+id/switchType"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:theme="@style/Theme.MyTheme"
                    app:useMaterialThemeColors="false" />

            </LinearLayout>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:padding="5dp"
                android:text="@{typeErrors}"
                android:textAlignment="textStart"
                android:textColor="?attr/colorPrimary"
                android:visibility="@{typeErrors != null ? View.VISIBLE : View.GONE}" />

            <View
                android:layout_width="match_parent"
                android:layout_height="2dp"
                android:background="?attr/colorAccent" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="15dp"
                android:gravity="center_vertical"
                android:orientation="horizontal">

                <View
                    android:layout_width="0dp"
                    android:layout_height="1dp"
                    android:layout_weight="1" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@{percent}"
                    android:visibility="@{percent != null ? View.VISIBLE : View.GONE}" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:drawablePadding="5dp"
                    android:text="@string/playlist_user_error"
                    android:textColor="?attr/colorPrimary"
                    android:visibility="@{userErrors ? View.VISIBLE : View.GONE}"
                    app:drawableStartCompat="@drawable/ic_warning"
                    app:drawableTint="?attr/colorPrimary" />

                <com.google.android.material.button.MaterialButton
                    android:id="@+id/btnCancel"
                    style="@style/textButton"
                    android:text="@string/cancel"
                    android:visibility="@{userErrors ? View.GONE : View.VISIBLE}" />

                <com.google.android.material.button.MaterialButton
                    android:id="@+id/btnCreate"
                    style="@style/defaultButton"
                    android:text="@string/create"
                    android:visibility="@{userErrors ? View.GONE : View.VISIBLE}"
                    app:icon="@drawable/ic_check_large" />

            </LinearLayout>

        </LinearLayout>

    </androidx.core.widget.NestedScrollView>

</layout>