<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>

        <variable
            name="artist"
            type="rahbari.erfan.mosito.models.Artist" />
    </data>

    <androidx.coordinatorlayout.widget.CoordinatorLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <com.google.android.material.appbar.AppBarLayout
            android:id="@+id/appBarLayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:fitsSystemWindows="true"
            android:theme="@style/ThemeOverlay.AppCompat.Dark.ActionBar">

            <com.google.android.material.appbar.CollapsingToolbarLayout
                android:id="@+id/collapsingToolbar"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:fitsSystemWindows="true"
                app:layout_scrollFlags="scroll|exitUntilCollapsed|snap"
                app:titleEnabled="false">

                <RelativeLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">

                    <ImageView
                        android:id="@+id/imgPicture"
                        android:layout_width="match_parent"
                        android:layout_height="300dp"
                        android:background="#455A64"
                        android:contentDescription="@string/app_name"
                        android:scaleType="centerCrop" />

                </RelativeLayout>

                <androidx.appcompat.widget.Toolbar
                    android:id="@+id/toolbar"
                    android:layout_width="match_parent"
                    android:layout_height="?attr/actionBarSize"
                    android:layout_gravity="bottom"
                    android:background="@drawable/bg_gradient"
                    android:paddingStart="5dp"
                    android:paddingEnd="5dp"
                    app:layout_collapseMode="pin"
                    app:layout_constraintTop_toTopOf="parent">

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:gravity="center"
                        android:orientation="horizontal">

                        <TextView
                            android:id="@+id/tvName"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@{artist.name}"
                            android:textColor="@color/white"
                            android:textSize="25sp"
                            android:textStyle="bold" />

                        <View
                            android:layout_width="0dp"
                            android:layout_height="0dp"
                            android:layout_weight="1" />

                        <com.google.android.material.button.MaterialButton
                            android:id="@+id/btnShuffle"
                            style="@style/defaultButton"
                            android:text="@string/shuffle"
                            app:icon="@drawable/ic_shuffle" />

                    </LinearLayout>

                </androidx.appcompat.widget.Toolbar>

            </com.google.android.material.appbar.CollapsingToolbarLayout>

            <com.google.android.material.tabs.TabLayout
                android:id="@+id/tabLayout"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:layout_gravity="bottom"
                android:layoutDirection="ltr"
                app:tabGravity="center">

                <com.google.android.material.tabs.TabItem
                    android:id="@+id/tabTopHits"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/top_hits" />

                <com.google.android.material.tabs.TabItem
                    android:id="@+id/tabMusics"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/latest" />

                <com.google.android.material.tabs.TabItem
                    android:id="@+id/tabAlbums"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/albums" />

            </com.google.android.material.tabs.TabLayout>

        </com.google.android.material.appbar.AppBarLayout>

        <androidx.viewpager.widget.ViewPager
            android:id="@+id/viewPager"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            app:layout_behavior="com.google.android.material.appbar.AppBarLayout$ScrollingViewBehavior" />

    </androidx.coordinatorlayout.widget.CoordinatorLayout>

</layout>